# vault

./: .gitignore  LICENSE  meson.build
data/: vault.appdata.xml  vault.desktop
po/: POTFILES  com.github.dkov01.vault.pot  de.po
src/: Application.vala
